--- a/individual-tools/basic-tools/basic-budget-tool.html
+++ b/individual-tools/basic-tools/basic-budget-tool.html
@@ -109,7 +109,7 @@
                     </p>
                   </div>
                   
-                <img src="../../images/basic-budget-laptop.png" alt="Basic Budgeting Tool">
+                  <a href="https://docs.google.com/spreadsheets/u/1/d/1ROjb0XKuRqXYjwu_ShfN7tfpCb1ACAiBzpKOfRurA1c/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/basic-budget-laptop.png" alt="Basic Budgeting Tool"></a>
                 <a href="https://docs.google.com/spreadsheets/u/1/d/1ROjb0XKuRqXYjwu_ShfN7tfpCb1ACAiBzpKOfRurA1c/copy?usp=sharing" target="_blank" class="download-button">Download</a>
             </section>
 
@@ -177,6 +177,7 @@
 
         <script src="../individual-tools-scripts/drop-down-text.js"></script>
         <script src="../../scripts/hamburger.js"></script>
+        <script src="../../scripts/mobile-tools-hoverdown.js"></script>
     </body>
 
 </html>
