--- a/individual-tools/basic-tools/basic-investment-tool .html
+++ b/individual-tools/basic-tools/basic-investment-tool .html
@@ -107,7 +107,7 @@
                     </p>
                   </div>
 
-                <img src="../../images/basic-investment-laptop.png" alt="Basic Investment Tool">
+                  <a href="https://docs.google.com/spreadsheets/u/1/d/19eVgUzvTuu0mPU0_3W_9WkS0-Z7P1TegxKM2F8NcCIs/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/basic-investment-laptop.png" alt="Basic Investment Tool"></a>
                 <a href="https://docs.google.com/spreadsheets/u/1/d/19eVgUzvTuu0mPU0_3W_9WkS0-Z7P1TegxKM2F8NcCIs/copy?usp=sharing" class="download-button" target="_blank">Download</a>
             </section>
 
@@ -175,6 +175,7 @@
 
         <script src="../individual-tools-scripts/drop-down-text.js"></script>
         <script src="../../scripts/hamburger.js"></script>
+        <script src="../../scripts/mobile-tools-hoverdown.js"></script>
     </body>
 
 </html>
