--- a/individual-tools/basic-tools/basic-retirement-tool.html
+++ b/individual-tools/basic-tools/basic-retirement-tool.html
@@ -135,22 +135,22 @@
                   <section class="tool-grid">
                     <div class="tool-card">
                       <h2>Single and Working</h2>
-                      <img src="../../images/single-working-laptop.jpg" alt="Single and Working">
+                      <a href="https://docs.google.com/spreadsheets/u/1/d/14HvU8qWToc9pzi9-5CCKMXDq1S-eG3kT7cVDGzo1yaE/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/single-working-laptop.jpg" alt="Single and Working"></a>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/14HvU8qWToc9pzi9-5CCKMXDq1S-eG3kT7cVDGzo1yaE/copy?usp=sharing" class="download-button">Download</a>
                     </div>
                     <div class="tool-card">
                       <h2>Single and Retired</h2>
-                      <img src="../../images/single-retired-laptop.jpg" alt="Single and Retired">
+                      <a href="https://docs.google.com/spreadsheets/u/1/d/1MSYI-C1wsHyEUeZDA149qFGi8y6D7MlpV6tt-GzJIa8/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/single-retired-laptop.jpg" alt="Single and Retired"></a>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/1MSYI-C1wsHyEUeZDA149qFGi8y6D7MlpV6tt-GzJIa8/copy?usp=sharing" class="download-button">Download</a>
                     </div>
                     <div class="tool-card">
                       <h2>Married and Working</h2>
-                      <img src="../../images/married-working-laptop.jpg" alt="Married and Working">
+                      <a href="https://docs.google.com/spreadsheets/u/1/d/1khcX_devqhXdMYAhDFj4Lcwh7YzaoN281QnR1hN9DDQ/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/married-working-laptop.jpg" alt="Married and Working"></a>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/1khcX_devqhXdMYAhDFj4Lcwh7YzaoN281QnR1hN9DDQ/copy?usp=sharing" class="download-button">Download</a>
                     </div>
                     <div class="tool-card">
                       <h2>Married and Retired</h2>
-                      <img src="../../images/married-retired-laptop.jpg" alt="Married and Retired">
+                      <a href="https://docs.google.com/spreadsheets/u/1/d/1VuStue2QZ8FOAjZ53LBKEQ0L5eRIbugivWf9f1vzUbo/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/married-retired-laptop.jpg" alt="Married and Retired"></a>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/1VuStue2QZ8FOAjZ53LBKEQ0L5eRIbugivWf9f1vzUbo/copy?usp=sharing" class="download-button">Download</a>
                     </div>
                   </section>
@@ -220,6 +220,7 @@
 
         <script src="../individual-tools-scripts/drop-down-text.js"></script>
         <script src="../../scripts/hamburger.js"></script>
+        <script src="../../scripts/mobile-tools-hoverdown.js"></script>
 
     </body>
 
