--- a/individual-tools/basic-tools/net-worth-calculator.html
+++ b/individual-tools/basic-tools/net-worth-calculator.html
@@ -83,7 +83,7 @@
         <main>
             <section class="section1">
                 <h1>Net Worth Calculator Tool.</h1>
-                <p class="first-p">Do you own your assets, or do your assets own you?</p>
+                <p class="first-p">Do you own your assets, or do your assets own you? The Net Worth Calculator helps you take control by clearly showing you what you truly own versus what you owe.</p>
                 
                 <div class="how-to-container">
                     <p class="how-to-text">Quick Start</p>
@@ -108,7 +108,7 @@
                     </p>
                   </div>
                   
-                <img src="../../images/net-worth-calculator-laptop.png" alt="Basic Budgeting Tool">
+                  <a href="https://docs.google.com/spreadsheets/u/1/d/1W-8gy9wNQUZ_y0DTY-2zIbUYHg77Kn5oU1TDoRekulw/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/net-worth-calculator-laptop.png" alt="Basic Budgeting Tool"></a>
                 <a href="https://docs.google.com/spreadsheets/u/1/d/1W-8gy9wNQUZ_y0DTY-2zIbUYHg77Kn5oU1TDoRekulw/copy?usp=sharing" class="download-button" target="_blank">Download</a>
             </section>
 
@@ -176,6 +176,7 @@
 
         <script src="../individual-tools-scripts/drop-down-text.js"></script>
         <script src="../../scripts/hamburger.js"></script>
+        <script src="../../scripts/mobile-tools-hoverdown.js"></script>
     </body>
 
 </html>
