--- a/tools.html
+++ b/tools.html
@@ -99,7 +99,7 @@
                             <p>The <span class="bold">basic budgeting tool</span> is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.</p>
                                 <!--<a href="">Explanation Video</a></p>-->
                         </div>
-                        <img src="images/basic-budget-laptop.png" alt="Basic Budget Excel Finance Tool">
+                        <a href="individual-tools/basic-tools/basic-budget-tool.html"><img src="images/basic-budget-laptop.png" alt="Basic Budget Excel Finance Tool"></a>
                     </div>
                     <a href="individual-tools/basic-tools/basic-budget-tool.html" class="download-button">Download</a>
                 </div>
@@ -110,7 +110,7 @@
                             <h3><a href="individual-tools/basic-tools/basic-retirement-tool.html">Retirement Planning Tool</a></h3>
                             <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards <span class="italics">financial stability.</span></p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
-                        <img src="images/retirement-laptop.png" alt="Retirement Planning Tool">
+                        <a href="individual-tools/basic-tools/basic-retirement-tool.html"><img src="images/retirement-laptop.png" alt="Retirement Planning Tool"></a>
                     </div>
                     <a href="individual-tools/basic-tools/basic-retirement-tool.html" class="download-button">Download</a>
                 </div>
@@ -121,7 +121,7 @@
                             <h3><a href="individual-tools/basic-tools/basic-investment-tool .html">Investment Management Tool</a></h3>
                             <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals.</p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
-                        <img src="images/basic-investment-laptop.png" alt="Basic Investment Management Tool">
+                        <a href="individual-tools/basic-tools/basic-investment-tool .html"><img src="images/basic-investment-laptop.png" alt="Basic Investment Management Tool"></a>
                     </div>
                     <a href="individual-tools/basic-tools/basic-investment-tool .html" class="download-button">Download</a>
                 </div>
@@ -130,9 +130,9 @@
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/basic-tools/net-worth-calculator.html">Net Worth Calculator Tool</a></h3>
-                            <p>Do you own your assets, or do your assets own you?</p> <!--<a href="">Explanation Video</a></p>-->
+                            <p>Do you own your assets, or do your assets own you? The Net Worth Calculator helps you take control by clearly showing you what you truly own versus what you owe.</p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
-                        <img src="images/net-worth-calculator-laptop.png" alt="Net Worth Calculator Tool">
+                        <a href="individual-tools/basic-tools/net-worth-calculator.html"><img src="images/net-worth-calculator-laptop.png" alt="Net Worth Calculator Tool"></a>
                     </div>
                     <a href="individual-tools/basic-tools/net-worth-calculator.html" class="download-button">Download</a>
                 </div>
@@ -146,18 +146,18 @@
                             <h3><a href="individual-tools/advanced-tools/advanced-budget-tool.html">Advanced Budget Tool</a></h3>
                             <p>This tool is for people who want in-depth analysis of their annual spending patterns. This tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money.</p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
-                        <img src="images/advanced-budget-laptop.png" alt="Advanced Budget Excel Tool">
+                        <a href="individual-tools/advanced-tools/advanced-budget-tool.html"><img src="images/advanced-budget-laptop.png" alt="Advanced Budget Excel Tool"></a>
                     </div>
                     <a href="individual-tools/advanced-tools/advanced-budget-tool.html" class="download-button">Download</a>
                 </div>
 
-                <div class="tools">
+                <div class="tools" id="last-listed-tool">
                     <div class="tools-content">
                         <div>
                             <h3><a href="individual-tools/advanced-tools/advanced-investment-tool.html">Advanced Investment Mangagement Tool</a></h3>
-                            <p>This tool is for people who want specific lists of quality securities. <span class="bold">NOT INVESTMENT ADVICE, FOR EDUCATION PURPOSES ONLY</span></p> <!--<a href="">Explanation Video</a></p>-->
+                            <p>This tool is for people who want specific lists of quality securities. <span class="bold">NOT INVESTMENT ADVICE, FOR EDUCATION PURPOSES ONLY.</span></p> <!--<a href="">Explanation Video</a></p>-->
                         </div>
-                        <img src="images/advanced-investment-laptop.png" alt="Advanced Investment Management Tool">
+                        <a href="individual-tools/advanced-tools/advanced-investment-tool.html"><img src="images/advanced-investment-laptop.png" alt="Advanced Investment Management Tool"></a>
                     </div>
                     <a href="individual-tools/advanced-tools/advanced-investment-tool.html" class="download-button">Download</a>
                 </div>
@@ -231,6 +231,7 @@
         </footer>
 
         <script src="scripts/hamburger.js"></script>
+        <script src="scripts/mobile-tools-hoverdown.js"></script>
     </body>
 
 </html>
