--- a/aboutus.html
+++ b/aboutus.html
@@ -195,6 +195,7 @@
         </footer>
 
         <script src="scripts/hamburger.js"></script>
+        <script src="scripts/mobile-tools-hoverdown.js"></script>
         
     </body>
 
