--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -173,6 +173,7 @@
 </footer>
 
 <script src="../scripts/hamburger.js"></script>
+<script src="../../scripts/mobile-tools-hoverdown.js"></script>
 
 </body>
 
