--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
         </footer>
 
         <script src="scripts/hamburger.js"></script>
+        <script src="scripts/mobile-tools-hoverdown.js"></script>
     </body>
 
 </html>
