--- a/individual-tools/advanced-tools/advanced-budget-tool.html
+++ b/individual-tools/advanced-tools/advanced-budget-tool.html
@@ -109,8 +109,8 @@
                     </p>
                   </div>
 
-                <img src="../../images/advanced-budget-laptop.png" alt="Basic Budgeting Tool">
-                <a href="" class="download-button">Download</a>
+                  <a href="https://docs.google.com/spreadsheets/u/1/d/1ROjb0XKuRqXYjwu_ShfN7tfpCb1ACAiBzpKOfRurA1c/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/advanced-budget-laptop.png" alt="Advanced Budgeting Tool"></a>
+                <a href="" class="download-button" target="_blank">Download</a>
             </section>
 
             <section class="final" id="join-us">
@@ -177,6 +177,7 @@
 
         <script src="../individual-tools-scripts/drop-down-text.js"></script>
         <script src="../../scripts/hamburger.js"></script>
+        <script src="../../scripts/mobile-tools-hoverdown.js"></script>
     </body>
 
 </html>
