completed tools dropdown for mobile devices

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span></span>
                   </div>
 
-                <nav class="top show" id="mobileMenu">
+                <nav class="top show">
                         <a href="index.html">Home</a>
 
                         <div class="hoverdown" id="toolsHoverdown">
