--- a/individual-tools/basic-tools/net-worth-calculator.html
+++ b/individual-tools/basic-tools/net-worth-calculator.html
@@ -67,12 +67,12 @@
                         <div class="hoverdown" id="toolsHoverdown">
                             <a href="../../tools.html" id="toolsToggle">Tools</a>
                             <div class="hoverdown-menu">
-                                <a href="basic-budget-tool.html">Basic Budgeting</a>
-                                <a href="basic-investment-tool .html">Investment Management</a>
-                                <a href="basic-retirement-tool.html">Retirement Planning</a>
-                                <a href="net-worth-calculator.html">Net Worth Calculator</a>
-                                <a href="../advanced-tools/advanced-budget-tool.html">Advanced Budgeting</a>
-                                <a href="../advanced-tools/advanced-investment-tool.html">Advanced Investment Management</a>
+                                <a href="basic-budget-tool.html">Budgeting</a>
+                                <a href="basic-investment-tool .html">Investment</a>
+                                <a href="basic-retirement-tool.html">Retirement</a>
+                                <a href="net-worth-calculator.html">Net Worth</a>
+                                <a href="../../tools.html#advanced-tools">Advanced</a>
+    
                             </div>
                         </div>
                         <a href="../../aboutus.html">About Us</a>
