--- a/individual-tools/advanced-tools/advanced-budget-tool.html
+++ b/individual-tools/advanced-tools/advanced-budget-tool.html
@@ -67,12 +67,11 @@
                         <div class="hoverdown" id="toolsHoverdown">
                             <a href="../../tools.html" id="toolsToggle">Tools</a>
                             <div class="hoverdown-menu">
-                                <a href="../basic-tools/basic-budget-tool.html">Basic Budgeting</a>
-                                <a href="../basic-tools/basic-investment-tool.html">Investment Management</a>
-                                <a href="../basic-tools/basic-retirement-tool.html">Retirement Planning</a>
-                                <a href="../basic-tools/net-worth-calculator.html">Net Worth Calculator</a>
-                                <a href="../advanced-tools/advanced-budget-tool.html">Advanced Budgeting</a>
-                                <a href="../advanced-tools/advanced-investment-tool.html">Advanced Investment Management</a>
+                                <a href="../basic-tools/basic-budget-tool.html">Budgeting</a>
+                                <a href="../basic-tools/basic-investment-tool.html">Investment</a>
+                                <a href="../basic-tools/basic-retirement-tool.html">Retirement</a>
+                                <a href="../basic-tools/net-worth-calculator.html">Net Worth</a>
+                                <a href="../../tools.html#advanced-tools">Advanced</a>
                             </div>
                         </div>
                         <a href="../../aboutus.html">About Us</a>
@@ -109,8 +108,8 @@
                     </p>
                   </div>
 
-                  <a href="https://docs.google.com/spreadsheets/u/1/d/1ROjb0XKuRqXYjwu_ShfN7tfpCb1ACAiBzpKOfRurA1c/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/advanced-budget-laptop.png" alt="Advanced Budgeting Tool"></a>
-                <a href="" class="download-button" target="_blank">Download</a>
+                  <a href="https://buy.stripe.com/bIY7vT1sIcvOgYEaEF" target="_blank" class="image-link"><img src="../../images/advanced-budget-laptop.png" alt="Advanced Budgeting Tool"></a>
+                <a href="https://buy.stripe.com/bIY7vT1sIcvOgYEaEF" class="download-button" target="_blank">Download</a>
             </section>
 
             <section class="final" id="join-us">
