--- a/tools.html
+++ b/tools.html
@@ -69,12 +69,11 @@
                 <div class="hoverdown" id="toolsHoverdown">
                     <a href="tools.html" id="toolsToggle">Tools</a>
                     <div class="hoverdown-menu">
-                        <a href="individual-tools/basic-tools/basic-budget-tool.html">Basic Budgeting</a>
-                        <a href="individual-tools/basic-tools/basic-investment-tool.html">Investment Management</a>
-                        <a href="individual-tools/basic-tools/basic-retirement-tool.html">Retirement Planning</a>
-                        <a href="individual-tools/basic-tools/net-worth-calculator.html">Net Worth Calculator</a>
-                        <a href="individual-tools/advanced-tools/advanced-budget-tool.html">Advanced Budgeting</a>
-                        <a href="individual-tools/advanced-tools/advanced-investment-tool.html">Advanced Investment Management</a>
+                        <a href="individual-tools/basic-tools/basic-budget-tool.html">Budgeting</a>
+                        <a href="individual-tools/basic-tools/basic-investment-tool.html">Investment</a>
+                        <a href="individual-tools/basic-tools/basic-retirement-tool.html">Retirement</a>
+                        <a href="individual-tools/basic-tools/net-worth-calculator.html">Net Worth</a>
+                        <a href="tools.html#advanced-tools">Advanced</a>
                     </div>
                 </div>
                 <a href="aboutus.html">About Us</a>
@@ -138,7 +137,7 @@
                 </div>
             </section>
 
-            <section class="section3">
+            <section class="section3" id="advanced-tools">
                 <h2>Advanced Tools</h2>
                 <div class="tools">
                     <div class="tools-content">
