completed website + media query for computer

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title>Money Matters.</title>
+        <title>MoneyMatters.</title>
         <meta charset="UTF-8">
         <meta name="description" content="Financial Calculators">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -162,7 +162,7 @@
                 <div class="connection-container">
                     <div>
                         <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
-                            <p>DISCORD LINK</p>
+                            <p>Discord Link:</p>
                             <img src="images/moneymatters-logo.png" alt="MoneyMatters. Logo">
                         </a>
                     </div>
@@ -171,7 +171,7 @@
                         <div>
                             <h3>Join the MoneyMatters. Community!</h3>
                         </div>
-                        <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
+                        <form id="signup-form" action="https://formspree.io/f/xpwdjagd" method="POST" target="_blank">
                             <div class="row">
                               <div class="col">
                                 <input type="text" name="first_name" class="form-control" placeholder="First name">
