--- a/tools.html
+++ b/tools.html
@@ -166,14 +166,14 @@
                 <div class="connection-container">
                     <div>
                         <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
-                            <p>DISCORD LINK</p>
+                            <p>Discord Link:</p>
                             <img src="images/moneymatters-logo.png" alt="">
                         </a>
                     </div>
 
                     <div class="form-container">
                         <h3>Join the MoneyMatters. Community!</h3>
-                        <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
+                        <form id="signup-form" action="https://formspree.io/f/xpwdjagd" method="POST" target="_blank">
                             <div class="row">
                               <div class="col">
                                 <input type="text" name="first_name" class="form-control" placeholder="First name">
