--- a/individual-tools/basic-tools/net-worth-calculator.html
+++ b/individual-tools/basic-tools/net-worth-calculator.html
@@ -116,14 +116,14 @@
                 <div class="connection-container">
                     <div>
                         <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
-                            <p>DISCORD LINK</p>
+                            <p>Discord Link:</p>
                             <img src="../../images/moneymatters-logo.png" alt="">
                         </a>
                     </div>
 
                     <div class="form-container">
                         <h3>Join the MoneyMatters. Community!</h3>
-                        <form id="signup-form" action="https://formspree.io/f/xovdvjng" method="POST">
+                        <form id="signup-form" action="https://formspree.io/f/xpwdjagd" method="POST" target="_blank">
                             <div class="row">
                               <div class="col">
                                 <input type="text" name="first_name" class="form-control" placeholder="First name">
@@ -154,7 +154,7 @@
                 <h3>Follow Us!</h3>
                 <div class="social-links">
                     <a href="https://www.instagram.com/moneymatters.tools?igsh=d2Rxbjg3dGY1c2ll&utm_source=qr" target="_blank"><img src="../../images/IGLOGO.png" alt="Instagram"></a>
-                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr" target="_blank"><img src="../../images/IGLOGO.png" alt="Facebook"></a>
+                    <a href="https://www.facebook.com/share/14wpjLu4Zze/?mibextid=wwXIfr" target="_blank"><img src="../../images/fbasset.png" alt="Facebook"></a>
                     <a href="https://www.tiktok.com/@moneymatters.tools?_t=ZP-8w46bg1nK5G&_r=1" target="_blank"><img src="../../images/TikTok_Icon_Black_Circle.png" alt="TikTok"></a>
                 </div>
             </div>
