trying this height

--- a/tools.html
+++ b/tools.html
@@ -9,10 +9,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+        
+        <!--Favicon-->
         <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
+
             <!-- TradingView Widget BEGIN -->
         <div class="tradingview-widget-container">
             <div class="tradingview-widget-container__widget"></div>
@@ -54,7 +57,7 @@
 
     <body>
         <header>
-            <div class="top-bar"></div>
+            <div class="top-bar"></div> <!--Black Bar of the nav that blends with the stock ticker-->
             <a href="index.html"><p>MoneyMatters.</p></a>
 
             <div class="hamburger">
