testing the fix for mobile nav dropdown

--- a/blogs/blogs-home.html
+++ b/blogs/blogs-home.html
@@ -51,6 +51,15 @@
   <!-- TradingView Widget END -->
       </head>
 
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZXJ5S59FQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LZXJ5S59FQ');
+</script>
 
     <body>
         <header>
