--- a/individual-tools/basic-tools/basic-retirement-tool.html
+++ b/individual-tools/basic-tools/basic-retirement-tool.html
@@ -50,6 +50,18 @@
     <!-- TradingView Widget END -->
     </head>
 
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZXJ5S59FQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LZXJ5S59FQ');
+</script>
+
+
     <body>
         <header>
             <div class="top-bar"></div>
@@ -135,22 +147,22 @@
                     <div class="tool-card">
                       <h2>Single and Working</h2>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/14HvU8qWToc9pzi9-5CCKMXDq1S-eG3kT7cVDGzo1yaE/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/single-working-laptop.jpg" alt="Single and Working"></a>
-                      <a href="https://docs.google.com/spreadsheets/u/1/d/14HvU8qWToc9pzi9-5CCKMXDq1S-eG3kT7cVDGzo1yaE/copy?usp=sharing" class="download-button">Download</a>
+                      <a href="https://docs.google.com/spreadsheets/u/1/d/14HvU8qWToc9pzi9-5CCKMXDq1S-eG3kT7cVDGzo1yaE/copy?usp=sharing" target="_blank" class="download-button">Download</a>
                     </div>
                     <div class="tool-card">
                       <h2>Single and Retired</h2>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/1MSYI-C1wsHyEUeZDA149qFGi8y6D7MlpV6tt-GzJIa8/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/single-retired-laptop.jpg" alt="Single and Retired"></a>
-                      <a href="https://docs.google.com/spreadsheets/u/1/d/1MSYI-C1wsHyEUeZDA149qFGi8y6D7MlpV6tt-GzJIa8/copy?usp=sharing" class="download-button">Download</a>
+                      <a href="https://docs.google.com/spreadsheets/u/1/d/1MSYI-C1wsHyEUeZDA149qFGi8y6D7MlpV6tt-GzJIa8/copy?usp=sharing" target="_blank" class="download-button">Download</a>
                     </div>
                     <div class="tool-card">
                       <h2>Married and Working</h2>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/1khcX_devqhXdMYAhDFj4Lcwh7YzaoN281QnR1hN9DDQ/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/married-working-laptop.jpg" alt="Married and Working"></a>
-                      <a href="https://docs.google.com/spreadsheets/u/1/d/1khcX_devqhXdMYAhDFj4Lcwh7YzaoN281QnR1hN9DDQ/copy?usp=sharing" class="download-button">Download</a>
+                      <a href="https://docs.google.com/spreadsheets/u/1/d/1khcX_devqhXdMYAhDFj4Lcwh7YzaoN281QnR1hN9DDQ/copy?usp=sharing" target="_blank" class="download-button">Download</a>
                     </div>
                     <div class="tool-card">
                       <h2>Married and Retired</h2>
                       <a href="https://docs.google.com/spreadsheets/u/1/d/1VuStue2QZ8FOAjZ53LBKEQ0L5eRIbugivWf9f1vzUbo/copy?usp=sharing" target="_blank" class="image-link"><img src="../../images/married-retired-laptop.jpg" alt="Married and Retired"></a>
-                      <a href="https://docs.google.com/spreadsheets/u/1/d/1VuStue2QZ8FOAjZ53LBKEQ0L5eRIbugivWf9f1vzUbo/copy?usp=sharing" class="download-button">Download</a>
+                      <a href="https://docs.google.com/spreadsheets/u/1/d/1VuStue2QZ8FOAjZ53LBKEQ0L5eRIbugivWf9f1vzUbo/copy?usp=sharing" target="_blank" class="download-button">Download</a>
                     </div>
                   </section>
                   
