--- a/tools.html
+++ b/tools.html
@@ -55,6 +55,16 @@
     </head>
 
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZXJ5S59FQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LZXJ5S59FQ');
+</script>
+
     <body>
         <header>
             <div class="top-bar"></div> <!--Black Bar of the nav that blends with the stock ticker-->
