almost done blog 1

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <html>
 
     <head>
+        <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KCZWJR44');</script>
+    <!-- End Google Tag Manager -->
         <title>MoneyMatters.</title>
         <meta name="google-site-verification" content="wU8G_RAIb273BngyOmdJXRqdTCea-2P7o4sBGFvH-QQ" />
         <meta charset="UTF-8">
@@ -52,22 +59,13 @@
   <!-- TradingView Widget END -->
     </head>
 
-
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZXJ5S59FQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-LZXJ5S59FQ');
-</script>
-
-
-
     <body>
+        <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KCZWJR44"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
         <header>
-            <div class="top-bar"></div>
+            <div class="top-bar"></div> <!--Black Bar of the nav that blends with the stock ticker-->
                 <a href="index.html"><p>MoneyMatters.</p></a>
 
                 <div class="hamburger">
@@ -175,7 +173,7 @@
             <section class="section4" id="join-us">
                 <div class="connection-container">
                     <div>
-                        <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
+                        <a href="https://discord.com/invite/zRSqwNpc" target="_blank">
                             <p>Discord Link:</p>
                             <img src="images/moneymatters-logo.png" alt="MoneyMatters. Logo">
                         </a>
