--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -8,9 +8,9 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-KCZWJR44');</script>
     <!-- End Google Tag Manager -->
-        <title>MoneyMatters. Blogs</title>
+        <title>Online Financial Calculator: Your Friendly Guide to Smarter Money Choices</title>
         <meta charset="UTF-8">
-        <meta name="description" content="MoneyMatters. Blogs">
+        <meta name="description" content="Online Financial Calculator: Your Friendly Guide to Smarter Money Choices">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="scss/blogs-home-styling.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -91,35 +91,65 @@
                     <a href="#join-us" class="block-link">Get Connected!</a>
                 </nav>
         </header>
-<section class="blog-hero">
-    <h1>MoneyMatters. Blogs</h1>
-    <p>Financial tips, tools, and real-world advice — for everyone.</p>
-  </section>
-  
-  <section class="blog-posts">
-    <a href="blog1.html">
-    <div class="blog-card">
-      <h2 class="blog-title">Online Financial Calculator</h2>
-      <img src="../images/blog1-image.png" alt="Online Financial Calculator">
-      <p class="blog-excerpt">Your Friendly Guide to Smarter Money Choices</p>
-      <a href="blog1.html" class="read-more">Read More</a>
-      </a>
-    </div>
-  
-    <!--<div class="blog-card">
-      <h2 class="blog-title">Understanding Credit Scores</h2>
-      <p class="blog-excerpt">Learn what affects your credit score and how to improve it.</p>
-      <a href="blog-post-2.html" class="read-more">Read More</a>
-    </div>
-  
-    <div class="blog-card">
-      <h2 class="blog-title">Top 5 Financial Mistakes to Avoid</h2>
-      <p class="blog-excerpt">Avoid these common traps that can set back your financial health.</p>
-      <a href="blog-post-3.html" class="read-more">Read More</a>
-    </div> -->
-  
-    <!-- Add more blog cards as needed -->
-  </section>
+
+<section class="blog-content">
+    <h1>Online Financial Calculator: Your Friendly Guide to Smarter Money Choices</h1>
+    <img src="../images/blog1-image.png" alt="Online Financial Calculator">
+    <p>Managing your finances can feel overwhelming sometimes—but guess what? It doesn’t have to be. Thanks to free online personal finance 
+        calculators like the ones at <a href="">MoneyMatters.</a>, you don’t need to be a financial expert to make smart decisions. Whether 
+        you're a student learning how to budget, a parent planning for your child’s future, or someone thinking about retirement, these tools are 
+        designed for you.</p>
+    
+    <h2>What Are Online Financial Calculators?</h2>
+    <p>Online financial calculators are simple tools that help you understand your money. You plug in your income, expenses, savings, or investment info—and these tools crunch the numbers for you. They're ideal for a smooth introduction to personal finance without sitting down next to a stranger and sharing personal info.
+        And the best part? They’re completely free and secure. No downloads, no fees, just clarity.</p>
+    
+    <h2>Why Everyone Can Benefit</h2>
+    <p>No matter where you are in life or what your financial situation looks like, there’s a tool that can help. Here are a few real-world 
+        examples of how people of all ages and stages can benefit:</p>
+    <h3>1. Budgeting: Keeping Track, Staying on Track</h3>
+    <p>Meet Sarah, a recent college graduate starting her first job. She wants to make sure her paycheck lasts the month, so she uses the 
+        Budgeting Calculator to track rent, groceries, student loans, and her weekend fun. In just a few clicks, she can see where her money is 
+        going and start saving a little each month.<br>
+
+        Or consider James, a single dad raising two kids. With school supplies, groceries, and monthly bills, budgeting can get tricky. The 
+        online tool helps him set spending limits and find ways to save—without sacrificing quality of life for his family.
+    </p>
+    <h3>2. Investing: Growing Your Wealth at Any Age</h3>
+    <p>Alex, 30, just started learning about investing. Using the Investment Calculator, they see how small monthly contributions to an 
+        investment account can grow over time. It’s motivating and helps build long-term wealth without taking big risks.<br>
+
+        On the other hand, Priya is in her 50s and wants to make sure her current investments will support her lifestyle after she retires. The 
+        calculator helps her compare different investment options and plan confidently.
+
+    </p>
+    <h3>3. Retirement: Planning Ahead with Confidence</h3>
+    <p>Even if retirement feels far away, it’s never too early to plan. Mia, a 25-year-old teacher, uses the Retirement Planner to see how her 
+        savings today could lead to financial freedom later. It’s reassuring to know she’s on the right path.<br>
+
+        Meanwhile, Robert is 60 and getting close to retirement. He inputs his savings and expected expenses into the tool to make sure he’ll 
+        have enough. It’s a great way to feel secure about his future and adjust if needed.
+
+    </p>
+    <h2>Made for Everyone, by People Who Get It</h2>
+    <p>MoneyMatters was created by two college friends who saw how confusing money can be—and wanted to do something about it. Their mission? 
+        Make high-quality financial tools that are free and easy to use, no matter your age, income, or experience.<br>
+
+        They believe everyone deserves access to good financial advice and planning tools. And their calculators are designed with everyday 
+        people in mind—clear, straightforward, and practical.
+
+    </p>
+    <h2>Take the First Step Today</h2>
+    <p>You don’t need a financial advisor to start making smarter money choices. With free tools from MoneyMatters, you can create a budget, 
+        plan your investments, and prepare for retirement—all from your phone or computer.<br>
+
+        Taking control of your money doesn’t mean making huge changes overnight. It means understanding where you are and where you want to go. 
+        And these calculators can help you do just that.<br>
+
+        So why wait? Start today. Your future self will thank you.
+
+    </p>
+</section>
 
   <section class="section4" id="join-us">
     <div class="connection-container">
