--- a/individual-tools/advanced-tools/advanced-investment-tool.html
+++ b/individual-tools/advanced-tools/advanced-investment-tool.html
@@ -1,5 +1,12 @@
 <html>
     <head>
+        <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KCZWJR44');</script>
+    <!-- End Google Tag Manager -->
         <title>Advanced Investment Management Tool</title>
         <meta charset="UTF-8">
         <meta name="description" content="Advanced Investment Management Tool">
@@ -51,20 +58,14 @@
     </head>
 
 
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZXJ5S59FQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-LZXJ5S59FQ');
-</script>
-
 
     <body>
+        <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KCZWJR44"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
         <header>
-            <div class="top-bar"></div>
+            <div class="top-bar"></div> <!--Black Bar of the nav that blends with the stock ticker-->
                 <a href="../../index.html"><p>MoneyMatters.</p></a>
 
                 <div class="hamburger">
@@ -127,7 +128,7 @@
             <section class="final" id="join-us">
                 <div class="connection-container">
                     <div>
-                        <a href="https://discord.com/invite/DCWFBPxh" target="_blank">
+                        <a href="https://discord.com/invite/zRSqwNpc" target="_blank">
                             <p>Discord Link:</p>
                             <img src="../../images/moneymatters-logo.png" alt="">
                         </a>
