--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -95,13 +95,15 @@
 <section class="blog-content">
     <h1>Online Financial Calculator: Your Friendly Guide to Smarter Money Choices</h1>
     <img src="../images/blog1-image.png" alt="Online Financial Calculator">
-    <p>Managing your finances can feel overwhelming sometimes—but guess what? It doesn’t have to be. Thanks to free online personal finance 
+    <p><span class="bold">Managing your finances can feel overwhelming</span> sometimes—but guess what? It doesn’t have to be. Thanks to free online personal finance 
         calculators like the ones at <a href="">MoneyMatters.</a>, you don’t need to be a financial expert to make smart decisions. Whether 
         you're a student learning how to budget, a parent planning for your child’s future, or someone thinking about retirement, these tools are 
         designed for you.</p>
     
     <h2>What Are Online Financial Calculators?</h2>
-    <p>Online financial calculators are simple tools that help you understand your money. You plug in your income, expenses, savings, or investment info—and these tools crunch the numbers for you. They're ideal for a smooth introduction to personal finance without sitting down next to a stranger and sharing personal info.
+    <p>Online financial calculators are simple tools that help you understand your money. You plug in your income, expenses, savings, or 
+        investment info—and these tools crunch the numbers for you. They're ideal for a smooth introduction to personal finance without sitting 
+        down next to a stranger and sharing personal info.
         And the best part? They’re completely free and secure. No downloads, no fees, just clarity.</p>
     
     <h2>Why Everyone Can Benefit</h2>
@@ -110,14 +112,14 @@
     <h3>1. Budgeting: Keeping Track, Staying on Track</h3>
     <p>Meet Sarah, a recent college graduate starting her first job. She wants to make sure her paycheck lasts the month, so she uses the 
         Budgeting Calculator to track rent, groceries, student loans, and her weekend fun. In just a few clicks, she can see where her money is 
-        going and start saving a little each month.<br>
+        going and start saving a little each month.<br><br>
 
         Or consider James, a single dad raising two kids. With school supplies, groceries, and monthly bills, budgeting can get tricky. The 
         online tool helps him set spending limits and find ways to save—without sacrificing quality of life for his family.
     </p>
     <h3>2. Investing: Growing Your Wealth at Any Age</h3>
     <p>Alex, 30, just started learning about investing. Using the Investment Calculator, they see how small monthly contributions to an 
-        investment account can grow over time. It’s motivating and helps build long-term wealth without taking big risks.<br>
+        investment account can grow over time. It’s motivating and helps build long-term wealth without taking big risks.<br><br>
 
         On the other hand, Priya is in her 50s and wants to make sure her current investments will support her lifestyle after she retires. The 
         calculator helps her compare different investment options and plan confidently.
@@ -125,7 +127,7 @@
     </p>
     <h3>3. Retirement: Planning Ahead with Confidence</h3>
     <p>Even if retirement feels far away, it’s never too early to plan. Mia, a 25-year-old teacher, uses the Retirement Planner to see how her 
-        savings today could lead to financial freedom later. It’s reassuring to know she’s on the right path.<br>
+        savings today could lead to financial freedom later. It’s reassuring to know she’s on the right path.<br><br>
 
         Meanwhile, Robert is 60 and getting close to retirement. He inputs his savings and expected expenses into the tool to make sure he’ll 
         have enough. It’s a great way to feel secure about his future and adjust if needed.
@@ -133,7 +135,7 @@
     </p>
     <h2>Made for Everyone, by People Who Get It</h2>
     <p>MoneyMatters was created by two college friends who saw how confusing money can be—and wanted to do something about it. Their mission? 
-        Make high-quality financial tools that are free and easy to use, no matter your age, income, or experience.<br>
+        Make high-quality financial tools that are free and easy to use, no matter your age, income, or experience.<br><br>
 
         They believe everyone deserves access to good financial advice and planning tools. And their calculators are designed with everyday 
         people in mind—clear, straightforward, and practical.
@@ -141,10 +143,10 @@
     </p>
     <h2>Take the First Step Today</h2>
     <p>You don’t need a financial advisor to start making smarter money choices. With free tools from MoneyMatters, you can create a budget, 
-        plan your investments, and prepare for retirement—all from your phone or computer.<br>
+        plan your investments, and prepare for retirement—all from your phone or computer.<br><br>
 
         Taking control of your money doesn’t mean making huge changes overnight. It means understanding where you are and where you want to go. 
-        And these calculators can help you do just that.<br>
+        And these calculators can help you do just that.<br><br>
 
         So why wait? Start today. Your future self will thank you.
 
